// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/ProjectInfoFormWrapper Create 1`] = `
<div>
  <h2
    className="text-3xl text-blue-500 font-bold"
  >
    Projekt erstellen
  </h2>
  <form
    className="mt-4"
    id="create-project-form"
    noValidate={true}
  >
    <h1>
      Insert here: a create project form
    </h1>
  </form>
  <footer
    className="mt-24"
  >
    <div
      className="flex justify-end"
    >
      <button
        className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-blue-500 bg-white border border-blue-500 text-blue-500 hover:bg-blue-500 hover:bg-opacity-10"
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
      <input
        className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-blue-500 bg-blue-500 text-white hover:opacity-60 ml-4"
        form="create-project-form"
        type="submit"
        value="Weiter"
        variant="primary"
      />
    </div>
  </footer>
</div>
]
`;

exports[`Storyshots Forms/ProjectInfoFormWrapper Edit 1`] = `
<div>
  <h2
    className="text-3xl text-blue-500 font-bold"
  >
    Projekt bearbeiten
  </h2>
  <form
    className="mt-4"
    id="edit-project-form"
    noValidate={true}
  >
    <h1>
      Insert here: an edit project form
    </h1>
  </form>
  <footer
    className="mt-24"
  >
    <div
      className="flex place-content-between"
    >
      <button
        className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-blue-500 bg-white border border-blue-500 text-blue-500 hover:bg-blue-500 hover:bg-opacity-10"
        onClick={[Function]}
        type="button"
      >
        Projekt löschen
      </button>
      <div>
        <button
          className="px-4 py-2 font-sans text-lg transition cursor-pointer focus-offset bg-white border border-blue-500 text-blue-500 hover:bg-blue-500 hover:bg-opacity-10"
          onClick={[Function]}
          type="button"
        >
          Abbrechen
        </button>
        <input
          className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-blue-500 bg-blue-500 text-white hover:opacity-60 ml-4"
          form="edit-project-form"
          type="submit"
          value="Speichern"
          variant="primary"
        />
      </div>
    </div>
  </footer>
</div>
`;
